--- a/requirements.txt
+++ b/requirements.txt
@@ -1,175 +1,4 @@
-aiodns==3.2.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.10.11
-aiosignal==1.3.2
-altair==5.5.0
-anyio==4.9.0
-APScheduler==3.6.3
-argcomplete==3.6.2
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-async-timeout==5.0.1
-attrs==25.3.0
-babel==2.17.0
-backoff==2.2.1
-beautifulsoup4==4.13.4
-bleach==6.2.0
-blinker==1.9.0
-blpapi==3.18.3
-cachetools==4.2.2
-ccxt==4.4.77
-censys==2.2.17
-certifi==2022.6.15
-cffi==1.17.1
-charset-normalizer==2.1.1
-click==8.1.8
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.1
-cryptography==44.0.2
-cycler==0.12.1
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-entrypoints==0.4
-exceptiongroup==1.2.2
-executing==2.2.0
-fastjsonschema==2.21.1
-filelock==3.18.0
-fonttools==4.56.0
-fqdn==1.5.1
-frozendict==2.4.6
-frozenlist==1.6.0
-fsspec==2025.3.2
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.40.3
-google-auth-oauthlib==1.2.2
-gspread==6.2.1
-h11==0.14.0
-httpcore==1.0.8
-httplib2==0.22.0
-httpx==0.28.1
-huggingface-hub==0.30.2
-idna==3.3
-ipykernel==6.29.5
-ipython==8.35.0
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.4.2
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.12.0
-jupyter_client==7.4.9
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab_pygments==0.3.0
-kiwisolver==1.4.8
-lxml==5.4.0
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.3
-mpmath==1.3.0
-multidict==6.4.3
-multitasking==0.0.11
-narwhals==1.35.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-nltk==3.9.1
-numpy==2.2.3
-oauth2client==4.1.3
-oauthlib==3.3.1
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandas-datareader==0.10.0
-pandocfilters==1.5.1
-parso==0.8.4
-peewee==3.17.9
-pillow==11.1.0
-platformdirs==4.3.7
-plotly==6.0.1
-prometheus_client==0.21.1
-prompt_toolkit==3.0.51
-propcache==0.3.1
-protobuf==5.29.4
-psutil==7.0.0
-pure_eval==0.2.3
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycares==4.6.1
-pycparser==2.22
-pydeck==0.9.1
-Pygments==2.19.1
-pyparsing==3.2.1
-PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
-python-telegram-bot==13.13
-pytz==2025.2
-pytz-deprecation-shim==0.1.0.post0
-pywin32==310
-pywinpty==2.0.15
-PyYAML==6.0.2
-pyzmq==24.0.1
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.0.0
-rpds-py==0.24.0
-rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.2
-seaborn==0.13.2
-Send2Trash==1.8.3
-sentence-transformers==4.1.0
-six==1.16.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-stack-data==0.6.3
-streamlit==1.44.1
-sympy==1.13.1
-tenacity==9.1.2
-terminado==0.18.1
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-tokenizers==0.21.1
-toml==0.10.2
-tomli==2.2.1
-torch==2.6.0
-tornado==6.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.51.3
-types-python-dateutil==2.9.0.20241206
-typing_extensions==4.13.2
-tzdata==2025.1
-tzlocal==4.2
-uri-template==1.3.0
-urllib3==1.26.12
-watchdog==6.0.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-yarl==1.20.0
-yfinance==0.2.56
+streamlit
+gspread
+oauth2client
+pandas
